gcp_scripts/mybankingclient-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mybankingclient
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mybankingclient
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: mybankingclient
    spec:
      containers:
      - image: ssaracut/mybankingclient:v1.0.0-alpha.19
        imagePullPolicy: IfNotPresent
        name: mybankingclient
        ports:
        - containerPort: 80
          protocol: TCP
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
