gcp_scripts/mybankingclient-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mybankingclient
spec:
  ports:
  - nodePort: 30891
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: mybankingclient
  sessionAffinity: None
  type: NodePort
