gcp_scripts/basic-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  tls:
    - secretName: example-cert
  backend:
    serviceName: nginx
    servicePort: 80
  rules:
  - host: ssaracut.com
    http:
      paths:
      - path: /mybankingclient
        backend:
          serviceName: mybankingclient
          servicePort: 80
      - path: /mybankingclient/*
        backend:
          serviceName: mybankingclient
          servicePort: 80
